<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#ccc"
            android:columnCount="2"
            android:rowCount="4"
            android:useDefaultMargins="true">

    <!-- ============================ -->
    <!-- The keypad's LED display -->
    <!-- ============================ -->

    <TextView
        android:id="@+id/keypad_display"
        android:layout_height="80dp"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:background="#0ef"
        android:gravity="right|bottom"
        android:textSize="54sp"/>

    <!-- ======================================= -->
    <!-- Row 1 of keypad has "+" and "-" buttons -->
    <!-- ======================================= -->

    <Button
        android:id="@+id/keypad_button_plus"
        style="@style/keypad_function_button"
        android:text="+"/>

    <Button
        android:id="@+id/keypad_button_minus"
        style="@style/keypad_function_button"
        android:text="-"/>

    <!-- ====================================== -->
    <!-- Row 2 of keypad has "C" and "=" button -->
    <!-- ====================================== -->

    <Button
        android:id="@+id/keypad_button_clear"
        style="@style/keypad_function_button"
        android:text="C"/>

    <Button
        android:id="@+id/keypad_button_equals"
        style="@style/keypad_function_button"
        android:text="="/>

    <!-- ======================================  -->
    <!-- Row 3 of keypad has "1" and "2" buttons -->
    <!-- ======================================= -->

    <Button
        android:id="@+id/keypad_button_1"
        style="@style/keypad_numeric_button"
        android:text="1"/>

    <Button
        android:id="@+id/keypad_button_2"
        style="@style/keypad_numeric_button"
        android:text="2"/>

    <!-- ======================================= -->
    <!-- Row 3 of keypad has "3" and "4" buttons -->
    <!-- ======================================= -->

    <Button
        android:id="@+id/keypad_button_3"
        style="@style/keypad_numeric_button"
        android:text="3"/>

    <!-- The "2" button -->

    <Button
        android:id="@+id/keypad_button_4"
        style="@style/keypad_numeric_button"
        android:text="4"/>


</GridLayout>
